# cuda-oxide-windows

./: .gitattributes  .gitignore  CHANGELOG.windows.md  CONTRIBUTING.md  Cargo.toml  FORK.md  README.md  dependency-licenses.csv  flake.nix  rust-toolchain.toml
.cargo/: config.toml
.devcontainer/: README.md  devcontainer.json
.github/scripts/: install-libffi.ps1
.github/workflows/: book.yml  cargo-deny.yml  ci.yml  clippy.yml  examples-compile.yml  fmt.yml  unit-tests.yml  upstream-monitor.yml  upstream-sync-candidate.yml  upstream-sync-main.yml  windows.yml
crates/cargo-oxide/: Cargo.toml  README.md
crates/cuda-artifact-finalizer/: Cargo.toml
crates/cuda-artifact-finalizer/src/: lib.rs  link.rs  nvvm.rs  options.rs  provenance.rs  validation.rs
crates/cuda-async/: README.md
crates/cuda-bindings/: Cargo.toml  README.md  build.rs
crates/cuda-core/: README.md
crates/cuda-device/: README.md
crates/cuda-host/: Cargo.toml  README.md
crates/cuda-host/src/: embedded.rs  launch.rs  lib.rs  ltoir.rs  ltoir_cache.rs  type_id.rs
crates/cuda-host/tests/: cuda_module_api.rs
crates/cuda-intrinsics/: Cargo.toml
crates/cuda-intrinsics-gen/: Cargo.toml
crates/cuda-intrinsics-gen/src/: abi_history.rs  extract.rs  generate.rs  main.rs  model.rs  probe.rs  ptx.rs  render.rs  resolve.rs  util.rs
crates/cuda-macros/: Cargo.toml  README.md
crates/cuda-oxide-codegen/: Cargo.toml
crates/cuda-oxide-codegen/src/: api.rs  error.rs  export.rs  generated.rs  lib.rs  llvm_tools.rs  lower.rs  options.rs  pipeline.rs  prep.rs  ptx.rs  target.rs  verify.rs
crates/cuda-oxide-codegen/tests/: compile_to_ptx.rs  concurrent_compile.rs  spine_kernel_ptx.rs  target_provenance.rs
crates/cuda-toolkit-discovery/: Cargo.toml
crates/dialect-nvvm/: README.md
crates/fuzzer/: README.md
crates/libnvvm-sys/: Cargo.toml  README.md
crates/mir-importer/: Cargo.toml  README.md
crates/mir-lower/: README.md
crates/nvjitlink-sys/: Cargo.toml  README.md
crates/nvjitlink-sys/src/: lib.rs
crates/oxide-artifacts/: README.md
crates/reserved-oxide-symbols/: README.md
crates/rustc-codegen-cuda/: Cargo.toml  README.md  STATUS.md  rust-toolchain.toml
crates/rustc-codegen-cuda/examples/cross_crate_recursion/: Cargo.toml  README.md
crates/rustc-codegen-cuda/examples/cross_crate_recursion/reprolib/: Cargo.toml
crates/rustc-codegen-cuda/examples/cross_crate_recursion/reprolib/src/: lib.rs
crates/rustc-codegen-cuda/examples/cross_crate_recursion/src/: main.rs
crates/rustc-codegen-cuda/examples/error_generated_intrinsic_unknown_id/: Cargo.toml
crates/rustc-codegen-cuda/examples/error_generated_intrinsic_unknown_id/fake_cuda_intrinsics/: Cargo.toml
crates/rustc-codegen-cuda/examples/error_generated_intrinsic_unknown_id/fake_cuda_intrinsics/src/: lib.rs
crates/rustc-codegen-cuda/examples/error_generated_intrinsic_unknown_id/src/: main.rs
crates/rustc-codegen-cuda/examples/extern_crate_closure/: Cargo.toml
crates/rustc-codegen-cuda/examples/extern_crate_closure/helper-lib/: Cargo.toml
crates/rustc-codegen-cuda/examples/extern_crate_closure/helper-lib/src/: lib.rs
crates/rustc-codegen-cuda/examples/extern_crate_closure/src/: main.rs
crates/rustc-codegen-cuda/examples/function_item_call/: Cargo.toml  README.md
crates/rustc-codegen-cuda/examples/function_item_call/src/: main.rs
crates/rustc-codegen-cuda/examples/generated_intrinsics_blackwell/: Cargo.toml
crates/rustc-codegen-cuda/examples/generated_intrinsics_blackwell/src/: main.rs
crates/rustc-codegen-cuda/examples/generated_ldmatrix/: Cargo.toml
crates/rustc-codegen-cuda/examples/generated_ldmatrix/src/: main.rs
crates/rustc-codegen-cuda/examples/issue118_repro/: Cargo.toml
crates/rustc-codegen-cuda/examples/issue118_repro/src/: main.rs
crates/rustc-codegen-cuda/examples/issue120_repro/: Cargo.toml
crates/rustc-codegen-cuda/examples/issue120_repro/src/: main.rs
crates/rustc-codegen-cuda/examples/issue123_repro/: Cargo.toml
crates/rustc-codegen-cuda/examples/issue123_repro/src/: main.rs
crates/rustc-codegen-cuda/examples/issue123_repro2/: Cargo.toml
crates/rustc-codegen-cuda/examples/issue123_repro2/src/: main.rs
crates/rustc-codegen-cuda/examples/issue128_repro/: Cargo.toml
crates/rustc-codegen-cuda/examples/issue128_repro/src/: main.rs
crates/rustc-codegen-cuda/examples/issue128_repro2/: Cargo.toml  build_output_llvm_dump.txt
crates/rustc-codegen-cuda/examples/issue128_repro2/arena_core/: Cargo.toml
crates/rustc-codegen-cuda/examples/issue128_repro2/arena_core/src/: lib.rs
crates/rustc-codegen-cuda/examples/issue128_repro2/src/: main.rs
crates/rustc-codegen-cuda/examples/issue129_repro/: Cargo.toml
crates/rustc-codegen-cuda/examples/issue129_repro/src/: main.rs
crates/rustc-codegen-cuda/examples/issue129_repro2/: Cargo.toml
crates/rustc-codegen-cuda/examples/issue129_repro2/src/: main.rs
crates/rustc-codegen-cuda/examples/issue131_repro/: Cargo.toml
crates/rustc-codegen-cuda/examples/issue131_repro/src/: main.rs
crates/rustc-codegen-cuda/examples/issue132_repro/: Cargo.toml
crates/rustc-codegen-cuda/examples/issue132_repro/src/: main.rs
crates/rustc-codegen-cuda/examples/issue132_repro2/: Cargo.toml
crates/rustc-codegen-cuda/examples/issue132_repro2/src/: main.rs
crates/rustc-codegen-cuda/examples/issue136_repro/: Cargo.toml
crates/rustc-codegen-cuda/examples/issue136_repro/src/: main.rs
crates/rustc-codegen-cuda/examples/issue146_repro/: Cargo.toml
crates/rustc-codegen-cuda/examples/issue146_repro/src/: main.rs
crates/rustc-codegen-cuda/examples/ptr_offset_from/: Cargo.toml
crates/rustc-codegen-cuda/examples/ptr_offset_from/src/: main.rs
crates/rustc-codegen-cuda/examples/slice_from_raw_parts_cast/: Cargo.toml  README.md
crates/rustc-codegen-cuda/examples/slice_from_raw_parts_cast/src/: main.rs
cuda-oxide-book/appendix/: api-quick-reference.md  building-from-source.md  supported-features.md
intrinsics/: abi-v1.toml  imported.json  overlay.toml
scripts/: package-windows-release.ps1  smoketest.ps1  smoketest.sh  sync-upstream.ps1
(+1437 files in other folders)
