[package]
name = "cuda-artifact-finalizer"
version = "0.2.1"
edition.workspace = true
description = "Driver-independent NVVM IR and LTOIR finalization for cuda-oxide"
authors.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
libnvvm-sys = { workspace = true }
nvjitlink-sys = { workspace = true }
sha2 = { workspace = true }
thiserror = { workspace = true }
