[package]
name = "cuda-host"
version = "0.2.1"
edition.workspace = true
description = "Host-side utilities for CUDA kernel development"
authors.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
half = { workspace = true }
cuda-macros = { workspace = true }
cuda-core = { workspace = true }
cuda-artifact-finalizer = { workspace = true }
sha2 = { workspace = true }
thiserror = { workspace = true }
cuda-async = { workspace = true, optional = true }

[features]
default = []
async = ["dep:cuda-async", "cuda-macros/async"]

[dev-dependencies]
cuda-device = { workspace = true }
