[package]
name = "nvjitlink-sys"
version = "0.2.1"
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Runtime (dlopen) bindings to NVIDIA nvJitLink (ships with the CUDA Toolkit)"

[dependencies]
cuda-toolkit-discovery = { workspace = true }
libloading = { workspace = true }
thiserror = { workspace = true }
