[package]
name = "cross_crate_recursion"
version = "0.1.0"
edition = "2024"
license = "Apache-2.0"

# Standalone workspace so the nested reprolib crate builds as a real dependency
# (mirrors examples/cross_crate_kernel).
[workspace]
members = ["reprolib"]

[dependencies]
reprolib = { path = "reprolib" }
cuda-device = { path = "../../../cuda-device" }
cuda-host = { path = "../../../cuda-host" }
cuda-core = { path = "../../../cuda-core" }
