[package]
name = "extern_crate_closure"
version = "0.1.0"
edition = "2024"
authors = ["Matthijs Brobbel <m1brobbel@gmail.com>"]
license = "Apache-2.0"

# Standalone workspace so the nested helper-lib crate can be a workspace member.
[workspace]
members = ["helper-lib"]

[dependencies]
helper-lib  = { path = "helper-lib" }
cuda-device = { path = "../../../cuda-device" }
cuda-host   = { path = "../../../cuda-host" }
cuda-core   = { path = "../../../cuda-core" }
