[package]
name = "generated_ldmatrix"
version = "0.1.0"
edition = "2024"
authors = ["Nihal Pasham <nihalp@nvidia.com>"]
license = "Apache-2.0"

# Standalone example workspace, matching the other codegen examples.
[workspace]

[dependencies]
cuda-intrinsics = { path = "../../../cuda-intrinsics" }
cuda-device = { path = "../../../cuda-device" }
cuda-host = { path = "../../../cuda-host" }
cuda-core = { path = "../../../cuda-core" }
