[package]
name = "issue118_repro"
version = "0.1.0"
edition = "2024"
license = "Apache-2.0"

# Mark as standalone crate (not part of parent workspace)
[workspace]

# Repro for issue #118: explicit #[repr(u32)] enum discriminant lowered
# with a width inferred from the variant count (u8) instead of the repr.
# Build compile-only with:
#   cargo oxide build issue118_repro --arch sm_90 -v
# Then inspect issue118_repro.ll for the GEP stride of `*const Tag`.

[dependencies]
cuda-device = { path = "../../../cuda-device" }
cuda-host = { path = "../../../cuda-host" }
cuda-core = { path = "../../../cuda-core" }
