[package]
name = "issue120_repro"
version = "0.1.0"
edition = "2024"
license = "Apache-2.0"

# Mark as standalone crate (not part of parent workspace)
[workspace]

# Repro for issue #120: Rvalue::Ref lowering drops runtime Index projections
# in places shaped like `&(*ptr).field[i]`. The lowered reference points at
# the containing field (element 0) instead of the indexed element.
# Build compile-only:
#   cargo oxide build issue120_repro --arch sm_90 -v
# Then inspect issue120_repro.ll: the index value must feed the GEP that
# produces the loaded address. If the bug is present, the GEP addresses
# field 0 and the index is only used by the bounds check.

[dependencies]
cuda-device = { path = "../../../cuda-device" }
cuda-host = { path = "../../../cuda-host" }
cuda-core = { path = "../../../cuda-core" }
