[package]
name = "issue123_repro"
version = "0.1.0"
edition = "2024"
license = "Apache-2.0"

# Mark as standalone crate (not part of parent workspace)
[workspace]

# Repro for issue #123: float `!=` lowers to `fcmp one` (ordered) instead
# of `une` (unordered), so the canonical `x != x` NaN check folds to false.
# Build compile-only:
#   cargo oxide build issue123_repro --arch sm_90 -v
# Then inspect issue123_repro.ll for the `fcmp` predicate.

[dependencies]
cuda-device = { path = "../../../cuda-device" }
cuda-host = { path = "../../../cuda-host" }
cuda-core = { path = "../../../cuda-core" }
