[package]
name = "issue123_repro2"
version = "0.1.0"
edition = "2024"
authors = ["Nihal Pasham <nihalp@nvidia.com>"]
license = "Apache-2.0"

# Mark as standalone crate (not part of parent workspace)
[workspace]

# Independent reproduction for issue #123: float `!=` lowers to `fcmp one`
# (ordered) instead of `fcmp une` (unordered), so the canonical `x != x`
# NaN check folds to false.
#
# Compile-only check (no GPU needed):
#   cargo oxide build issue123_repro2 --arch sm_90 -v

[dependencies]
cuda-device = { path = "../../../cuda-device" }
cuda-host = { path = "../../../cuda-host" }
cuda-core = { path = "../../../cuda-core" }
