[package]
name = "issue128_repro"
version = "0.1.0"
edition = "2024"
license = "Apache-2.0"

# Mark as standalone crate (not part of parent workspace)
[workspace]

# Repro for issue #128: repr(Rust) struct with reordered fields and an
# interior-padded enum field. The mir-lower aggregate index computations
# (insertvalue / GEP) ignore the explicit [N x i8] padding slots that
# build_struct_with_explicit_padding inserts, so field indices are off
# by the pad count (and a missing type-history entry silently falls back
# to identity decl-order indices).
# Build compile-only with:
#   cargo oxide build issue128_repro --arch sm_90 -v
# Then inspect issue128_repro.ll for insertvalue/GEP indices against the
# padded struct type.

[dependencies]
cuda-device = { path = "../../../cuda-device" }
cuda-host = { path = "../../../cuda-host" }
cuda-core = { path = "../../../cuda-core" }
