[package]
name = "issue131_repro"
version = "0.1.0"
edition = "2024"
license = "Apache-2.0"

# Mark as standalone crate (not part of parent workspace)
[workspace]

# Repro for issue #131: `match xs[i]` over an array of enums fails to import
# with "Downcast on non-ADT type: Array".

[dependencies]
cuda-device = { path = "../../../cuda-device" }
cuda-host = { path = "../../../cuda-host" }
cuda-core = { path = "../../../cuda-core" }
