[package]
name = "issue132_repro2"
version = "0.1.0"
edition = "2024"
license = "Apache-2.0"

# Mark as standalone crate (not part of parent workspace)
[workspace]

# Independent repro for issue #132: kernel hits an illegal memory access
# (CUDA 700) when it uses Option<&T>::unwrap_or(&literal).

[dependencies]
cuda-device = { path = "../../../cuda-device" }
cuda-host = { path = "../../../cuda-host" }
cuda-core = { path = "../../../cuda-core" }
