[package]
name = "issue146_repro"
version = "0.1.0"
edition = "2024"
authors = ["Nihal Pasham <nihalp@nvidia.com>"]
license = "Apache-2.0"

# Mark as standalone crate (not part of parent workspace)
[workspace]

# Repro for issue #146: matching on std::cmp::Ordering returned from a
# helper takes the wrong arm (Less acts as Equal) because the enum tag
# is stored in variant-index space while SwitchInt compares against
# rustc discriminant values.

[dependencies]
cuda-device = { path = "../../../cuda-device" }
cuda-host = { path = "../../../cuda-host" }
cuda-core = { path = "../../../cuda-core" }
