[package]
name = "ptr_offset_from"
version = "0.1.0"
edition = "2024"
license = "Apache-2.0"

# Standalone crate, not part of the parent workspace.
[workspace]

# Exercises raw pointer distance intrinsics:
# - `ptr_offset_from_unsigned::<T>` via `offset_from_unsigned`
# - `ptr_offset_from::<T>` via `offset_from`
# - byte-oriented wrappers via `byte_offset_from*`
#
# Build and run with:
#   cargo oxide run ptr_offset_from

[dependencies]
cuda-device = { path = "../../../cuda-device" }
cuda-host = { path = "../../../cuda-host" }
cuda-core = { path = "../../../cuda-core" }
